crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/018.cypher
CREATE INDEX ON :Person(name); MATCH (n) RETURN n
